fixed secon row wrap 992px 768px 576px

--- a/style.css
+++ b/style.css
@@ -173,19 +173,9 @@ hr{
     margin-top: 2rem;
     margin-bottom: 3rem;
 }
-/*
-.first-row-card{
-    width: 200px;
-    height: 200px;
-    background-color: white;
-    margin-right: 1rem;
-}
-*/
 
 .second-row-card{
     width: 200px;
-    height: 200px;
-    background-color: white;
     margin-right: 1rem;
 }
 
